"Jump to Nearest Date" now jumps to nearest day after today,
not to nearest time after now.

Pros:
+ Matches expectations + button label better
+ Lets students review more easily in-class by jumping to the current
  lecture while in class, not the event that *begins* next
+ more readable date comparisons
  + No more unsightly `+new Date(/* ommitted code */)`
  + In fact, no more raw javascript `Date`

Con:
- `dayjs` gets shipped client-side

--- a/src/components/Schedule.astro
+++ b/src/components/Schedule.astro
@@ -295,18 +295,23 @@ const concluded = calculateAbsoluteDate({
   </style>
 
   <script>
+    import dayjs from "dayjs";
+
     // function to jump to the nearest date, button and functionality is set here
     const jumpToDate = () => {
-      const today = +new Date();
+      const today = dayjs();
       const rows = document.querySelectorAll("tr[data-date]:not([hidden])");
       const nearestRow = Array.from(rows)
         .filter(
-          (row) => +new Date(row.getAttribute("data-date") ?? today) > today,
+          (row) => {
+            const rowDate = dayjs(row.getAttribute("data-date"));
+            return rowDate.isSame(today, 'day') || rowDate.isAfter(today, 'day')
+          },
         ) // Filter out past events
         .sort((a, b) => {
           return (
-            Math.abs(today - +new Date(a.getAttribute("data-date") ?? today)) -
-            Math.abs(today - +new Date(b.getAttribute("data-date") ?? today)) // Sort by diff between today's date and event's date
+            Math.abs(today.diff(dayjs(a.getAttribute("data-date")) ?? today)) -
+            Math.abs(today.diff(dayjs(b.getAttribute("data-date")) ?? today)) // Sort by diff between today's date and event's date
           );
         })[0] as HTMLElement; // Return first item (nearest date)
       if (!nearestRow) return;
