Restored null-date logic.
I find this logic kinda questionable, but it makes some sense.
Basically it is:
If any of the rows (that represent events) found when parsing the list
of events on a press of the "Jump to Date Button" have a null
"data-date" attribute, pretend that event is happening today.

My previous commit changed this logic subtly such that it didn't make
any sense - checking if the result of `dayjs` was null, instead of if
the attribute was null, in 2 of 3 cases - and forgetting to check at all
in the 3rd case (whoops).

--- a/src/components/Schedule.astro
+++ b/src/components/Schedule.astro
@@ -304,14 +304,14 @@ const concluded = calculateAbsoluteDate({
       const nearestRow = Array.from(rows)
         .filter(
           (row) => {
-            const rowDate = dayjs(row.getAttribute("data-date"));
+            const rowDate = dayjs(row.getAttribute("data-date") ?? today);
             return rowDate.isSame(today, 'day') || rowDate.isAfter(today, 'day')
           },
         ) // Filter out past events
         .sort((a, b) => {
           return (
-            Math.abs(today.diff(dayjs(a.getAttribute("data-date")) ?? today)) -
-            Math.abs(today.diff(dayjs(b.getAttribute("data-date")) ?? today)) // Sort by diff between today's date and event's date
+            Math.abs(today.diff(dayjs(a.getAttribute("data-date") ?? today))) -
+            Math.abs(today.diff(dayjs(b.getAttribute("data-date") ?? today))) // Sort by diff between today's date and event's date
           );
         })[0] as HTMLElement; // Return first item (nearest date)
       if (!nearestRow) return;
