`npx biome check --write`.

--- a/src/components/Schedule.astro
+++ b/src/components/Schedule.astro
@@ -1,11 +1,11 @@
 ---
 import { getCollection } from "astro:content";
-import { marked } from "marked";
-import DOMPurify from "isomorphic-dompurify";
-import dayjs, { type Dayjs } from "dayjs";
-import { formatTime, calculateAbsoluteDate } from "../utils/dateUtils";
 import { Badge } from "@astrojs/starlight/components";
+import dayjs, { type Dayjs } from "dayjs";
+import DOMPurify from "isomorphic-dompurify";
+import { marked } from "marked";
 import { transformContentData } from "../utils/contentUtils";
+import { calculateAbsoluteDate, formatTime } from "../utils/dateUtils";
 
 interface Reading {
   link: string;
